fix bottom spacing in contact info widget

--- a/public/static/components/contact-info/stylesheets/contact-info.css
+++ b/public/static/components/contact-info/stylesheets/contact-info.css
@@ -9,3 +9,6 @@
 .contact-info p {
   margin-top: 0;
 }
+.contact-info p:last-child {
+  margin-bottom: 0;
+}
